2007-08-13  Emmanuele Bassi  <ebassi@gnome.org>

	* libgdict/gdict-client-context.c: Destroy the current command,
	if present, when we are forcing a disconnection. (should fix
	#406119 and duplicates, when we get garbage from the server)

2007-08-13  Emmanuele Bassi  <ebassi@gnome.org>

	* src/gdict-window.c: Set the page of the sidebar only if we
	have one coming from GConf.

2007-08-13  Emmanuele Bassi  <ebassi@gnome.org>

	* src/gdict-applet.c: Hide the find pane when hiding the
	window.

2007-08-13  Emmanuele Bassi  <ebassi@gnome.org>

	* libgdict/*.[ch]: Add more documentation.

2007-08-13  Emmanuele Bassi  <ebassi@gnome.org>

	* libgdict/*.[ch]: Use the sources to write the documentation,
	as it should be.

2007-08-13  Emmanuele Bassi  <ebassi@gnome.org>

	* libgdict/gdict-defbox.c: Add case-insensitive search, using
	gtksourceview search code. (#466180)
	
	(hide_find_pane),
	(find_prev_clicked_cb), (find_next_clicked_cb),
	(find_entry_changed_cb),
	(gdict_defbox_real_show_find), (gdict_defbox_real_hide_find),
	(gdict_defbox_set_show_find): Automatically hide the find pane
	widget after 5 seconds since the last change in the entry or the
	last clicked event on the find next/prev buttons.
	
	(gdict_defbox_init), (gdict_defbox_dispose): Remove the unused
	GtkTooltips object.

2007-08-10  Emmanuele Bassi  <ebassi@gnome.org>

	* libgdict/gdict-defbox.c (gdict_defbox_insert_body): Add
	more strict validation when highlighting the links. (#465336)

2007-08-09  Emmanuele Bassi  <ebassi@gnome.org>

	* src/gdict-window.c (gdict_window_lookup_end): Perform a
	match of the similar words even if we have found a valid
	definition. (#464991)

2007-08-05  Emmanuele Bassi  <ebassi@gnome.org>

	* src/gdict-window.c (sidebar_closed_cb): Use the right
	function to set the sidebar as invisible instead of directly
	accessing the data. (#436542, Iain Nicol)

2007-02-13  Emmanuele Bassi  <ebassi@gnome.org>

	* Makefile.am:
	* AUTHORS: Add authors file.

	* TODO: Update.
