@@ -20,9 +20,9 @@
 #ifndef __GDICT_VERSION_H__
 #define __GDICT_VERSION_H__
 
-#define GDICT_MAJOR_VERSION	@GDICT_MAJOR_VERSION@
-#define GDICT_MINOR_VERSION	@GDICT_MINOR_VERSION@
-#define GDICT_MICRO_VERSION	@GDICT_MICRO_VERSION@
+#define GDICT_MAJOR_VERSION	(@GDICT_MAJOR_VERSION@)
+#define GDICT_MINOR_VERSION	(@GDICT_MINOR_VERSION@)
+#define GDICT_MICRO_VERSION	(@GDICT_MICRO_VERSION@)
 
 #define GDICT_CHECK_VERSION(major,minor,micro)	(((major) >= GDICT_MAJOR_VERSION) || \
 						 (((major) == GDICT_MAJOR_VERSION) && \
