@@ -1,3 +1,13 @@
+2007-08-18  Emmanuele Bassi  <ebassi@gnome.org>
+
+	Out of tree build cleanups. (#414013, Loic Minier)
+
+	* src/Makefile.am: Add missing -I flag for out of tree builds.
+
+	* libgdict/gdict.h: Full include.
+
+	* libgdict/gdict-version.h.in: Protect expanded version numbers.
+
 2007-08-13  Emmanuele Bassi  <ebassi@gnome.org>
 
 	* libgdict/gdict-client-context.c: Destroy the current command,
